Closed Bug 1800233 Opened 2 years ago Closed 2 years ago

Seeking an audio file with "Loop" active will reset it to 0:00

Categories

(Core :: Audio/Video: Playback, defect, P2)

Firefox 108
Desktop
All
defect

Tracking

()

VERIFIED FIXED
109 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox107 --- unaffected
firefox108 --- verified
firefox109 --- verified

People

(Reporter: csasca, Assigned: alwu)

References

(Regression)

Details

(Keywords: regression)

Attachments

(3 files)

Attached image seek with loop.gif

Found in

  • Firefox Nightly 108.0a1

Affected versions

  • Firefox Nightly 108.0a1

Tested platforms

  • Affected platforms: Windows 7, macOS 13, Ubuntu 22.04
  • Unaffected platforms:

Steps to reproduce

  1. Launch Firefox
  2. Access an audio file, for example
  3. Right click over it and activate "Loop"
  4. Seek the audio file by clicking over

Expected result

  • The audio file is loaded and plays correctly

Actual result

  • The audio file playback resets to 0:00

Regression range

  • Seems that it was recently introduced, 107.0 is not affected.

Additional notes

  • The issue can be seen in the attachment
Has STR: --- → yes

Searched for a regression range and it seems that this issue has been introduced by Bug 1262276 - part18 : add a pref to control video seamless looping.

Regressed by: 1262276

:alwu, since you are the author of the regressor, bug 1262276, could you take a look?

For more information, please visit auto_nag documentation.

Flags: needinfo?(alwu)

Same behaviour in videos without audio.

Assignee: nobody → alwu
Flags: needinfo?(alwu)
Priority: -- → P2

This patch fixes the incorrect condition for the single track playback,
because the EOS flag for the nonexistent track would always be true.

Eg. for audio-only playback, mIsReachingVideoEOS is always true.

Set release status flags based on info from the regressing bug 1262276

Pushed by alwu@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/1ecff38b5156
part1 : only seek back to the head when all tracks reach to EOS already. r=padenot
https://hg.mozilla.org/integration/autoland/rev/7abef09cc308
part2 : add test cases to ensure the position won't be changed to zero incorrectly after seeking. r=padenot
Regressions: 1800744
Regressions: 1800745
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 109 Branch
Duplicate of this bug: 1801610

Comment on attachment 9303351 [details]
Bug 1800233 - part1 : only seek back to the head when all tracks reach to EOS already.

Beta/Release Uplift Approval Request

  • User impact if declined: Seeking on a loop audio would be broken.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: See comment0.
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): It's a just simple one line condition change, to allow single track playback can seek properly. It doesn't introduce any new feature or a major structural change. It's also covered by an automation test.
  • String changes made/needed:
  • Is Android affected?: Yes
Attachment #9303351 - Flags: approval-mozilla-beta?
Attachment #9303352 - Flags: approval-mozilla-beta?
Flags: qe-verify+
QA Whiteboard: [qa-triaged]

Verified that this issue is fixed on Firefox 109.0a1 (2022-11-23). Tests were performed on macOS 13.0.1, Ubuntu 22.04 and Windows 11.

Comment on attachment 9303351 [details]
Bug 1800233 - part1 : only seek back to the head when all tracks reach to EOS already.

Approved for 108.0b6.

Attachment #9303351 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

Comment on attachment 9303352 [details]
Bug 1800233 - part2 : add test cases to ensure the position won't be changed to zero incorrectly after seeking.

Approved for 108.0b6.

Attachment #9303352 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

Verified the fix on Firefox 108.0b6 as well. Tests performed on macOS 13.0.1, Ubuntu 22.04 and Windows 11.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: