Bug 1800233 - part1 : only seek back to the head when all tracks reach to EOS already. r=padenot, a=dmeehan

This patch fixes the incorrect condition for the single track playback,
because the EOS flag for the nonexistent track would always be true.

Eg. for audio-only playback, `mIsReachingVideoEOS` is always true.

Differential Revision: https://phabricator.services.mozilla.com/D162025